istio-system/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "*"
  gateways:
  - web-gateway
  http:
  - route:
    - destination:
        host: k8s-sample
        subset: v1
        port:
          number: 8080
      weight: 50
    - destination:
        host: k8s-sample
        subset: v2
        port:
          number: 8080
      weight: 50
